--- a/resources/style/default/scss/app/06_objects/_o-contactPage.scss
+++ b/resources/style/default/scss/app/06_objects/_o-contactPage.scss
@@ -1,13 +1,8 @@
-.o-newsView {
+.o-contactPage {
   padding: 1rem 0;
 
   @media screen and ('min-width: 768px') {
     padding: 3rem 0;
-  }
-
-  &_title {
-    margin: 0 0 1rem;
-    color: darken($text-color, 16%);
   }
 
 }
