--- a/resources/style/default/scss/app/app.scss
+++ b/resources/style/default/scss/app/app.scss
@@ -49,24 +49,30 @@
 /*------------------------------------------------------------------------------------
   '06_objects'
 ------------------------------------------------------------------------------------*/
+@import "06_objects/o-article";
+@import "06_objects/o-catalog";
+@import "06_objects/o-contactPage";
 @import "06_objects/o-copyright";
 @import "06_objects/o-gallery";
 @import "06_objects/o-mainFooter";
 @import "06_objects/o-mainHeader";
+@import "06_objects/o-newProducts";
 @import "06_objects/o-news";
 @import "06_objects/o-newsView";
 @import "06_objects/o-novelty";
+@import "06_objects/o-searchForm";
 @import "06_objects/o-slider";
 @import "06_objects/o-social";
 @import "06_objects/o-subscribe";
 @import "06_objects/o-tbl";
+@import "06_objects/o-toggle";
 @import "06_objects/o-welcome";
 
 
 /*------------------------------------------------------------------------------------
   '07_pages'
 ------------------------------------------------------------------------------------*/
-//@import "07_pages/page";
+@import "07_pages/p-catalog";
 
 
 /*------------------------------------------------------------------------------------
