--- a/resources/style/default/scss/app/app.scss
+++ b/resources/style/default/scss/app/app.scss
@@ -51,6 +51,7 @@
 ------------------------------------------------------------------------------------*/
 @import "06_objects/o-article";
 @import "06_objects/o-catalog";
+@import "06_objects/o-category";
 @import "06_objects/o-contactPage";
 @import "06_objects/o-copyright";
 @import "06_objects/o-gallery";
