--- a/resources/style/default/scss/app/app.scss
+++ b/resources/style/default/scss/app/app.scss
@@ -62,6 +62,7 @@
 @import "06_objects/o-newsView";
 @import "06_objects/o-novelty";
 @import "06_objects/o-searchForm";
+@import "06_objects/o-shopItemView";
 @import "06_objects/o-slider";
 @import "06_objects/o-social";
 @import "06_objects/o-subscribe";
